--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <div class="row">
                                     <div class="col-sm-4 col-md-4 col-lg-4">
                                         <div class="photo">
-                                            <img src="images/felicity.jpeg" alt="Felicity Jones">
+                                            <img src="images/wnv.jpg" alt="Felicity Jones">
                                         </div>
                                     </div>
 
@@ -134,7 +134,10 @@
                                             <div class="block-title">
                                                 <h3>Quem <span>Sou?</span></h3>
                                             </div>
-                                            <p>Olá! Eu sou Wellington N. Verzola. Gosto de programação. Aqui você irá encontrar algumas outras informações sobre mim.</p>
+                                            <p>Olá, sou um desenvolvedor back-end apaixonado por novas tecnologias e como elas podem ajudar a tornar nossas vidas melhores. Sou Licenciado em Sistemas de Informação, Curso Técnico em Informática e trabalhei
+                                                durante todo o período de estudo, acumulando 16 anos de experiência na área de Informática. Já trabalhei em várias funções, de DevOps a desenvolvedor web, fornecendo soluções para vários problemas sem estar
+                                                preso a uma tecnologia específica. Com experiência de trabalho em diferentes ambientes como pequena e média empresa. Um aluno constante que gosta de misturar tecnologias novas e entusiastas com tópicos acadêmicos
+                                                como engenharia de software, arquitetura de software, qualidade de software e assim por diante. Tenho uma sólida formação em bancos de dados relacionais, linguagens OOP como Delphi, Linux e serviços de rede.</p>
                                         </div>
                                         <div class="download-resume">
                                             <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
@@ -148,7 +151,7 @@
                                             <li><span class="title">Cidade/Estado</span><span class="value">Cachoeiro de Itapemrim, ES</span></li>
                                             <li><span class="title">E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
                                             <li><span class="title">Fone</span><span class="value">+5528 99937-9884</span></li>
-                                            <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
+                                            <li><span class="title">Freelance</span><span class="value available">Inisponível</span></li>
                                         </ul>
                                     </div>
 
