--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <a class="pt-trigger" href="index.html#services">Serviços</a>
                         </li>
                         <li>
-                            <a class="pt-trigger" href="index.html#portfolio">Portfólio</a>
+                            <a class="pt-trigger" href="#">Portfólio</a>
                         </li>
                     </ul>
                     <!-- /Main menu -->
