--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="header-content">
                 <div class="site-title-block mobile-hidden">
                     <a href="index.html#home">
-                        <div class="site-title">Wellington <span>Nunes Verzola</span></div>
+                        <div class="site-title">Wellington <span>N. Verzola</span></div>
                     </a>
                 </div>
 
@@ -52,7 +52,7 @@
                             <a class="pt-trigger" href="index.html#resume">Currículo</a>
                         </li>
                         <li>
-                            <a class="pt-trigger" href="index.html#services">Serviços</a>
+                            <a class="pt-trigger" href="#">Serviços</a>
                         </li>
                         <li>
                             <a class="pt-trigger" href="#">Portfólio</a>
