--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Mobile Header -->
         <div class="mobile-header mobile-visible">
             <div class="mobile-logo-container">
-                <div class="mobile-site-title">Wellington Nunes Verzola</div>
+                <div class="mobile-site-title">Wellington N. Verzola</div>
             </div>
 
             <a class="menu-toggle mobile-visible">
