--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="header-content">
                 <div class="site-title-block mobile-hidden">
                     <a href="index.html#home">
-                        <div class="site-title">Wellington <span>N. Verzola</span></div>
+                        <div class="site-title">Wellington <span>Nunes Verzola</span></div>
                     </a>
                 </div>
 
@@ -68,7 +68,7 @@
         <!-- Mobile Header -->
         <div class="mobile-header mobile-visible">
             <div class="mobile-logo-container">
-                <div class="mobile-site-title">Wellington N. Verzola</div>
+                <div class="mobile-site-title">Wellington Nunes Verzola</div>
             </div>
 
             <a class="menu-toggle mobile-visible">
@@ -97,7 +97,7 @@
 
                                     <div class="col-sm-8 col-md-8 col-lg-8">
                                         <div class="title-block">
-                                            <h1>Wellington Nunes Verzola</h1>
+                                            <h1>Wellington N. Verzola</h1>
                                             <div class="owl-carousel text-rotation">
                                                 <div class="item">
                                                     <div class="sp-subtitle">Desenvolvedor Backend</div>
