--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br" class="no-js">
 
 <head>
+    <title>Wellington Nunes Verzola</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wellington Nunes Verzola</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Curriculum vitae Wellington Nunes Verzola" />
     <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
@@ -37,7 +37,7 @@
             <div class="header-content">
                 <div class="site-title-block mobile-hidden">
                     <a href="index.html#home">
-                        <div class="site-title">Wellington <span>Nunes Verzola</span></div>
+                        <div class="site-title"><span>Wellington N. Verzola</span></div>
                     </a>
                 </div>
 
@@ -49,13 +49,16 @@
                             <a class="pt-trigger" href="index.html#home">Início</a>
                         </li>
                         <li>
-                            <a class="pt-trigger" href="index.html#resume">Currículo</a>
+                            <a class="pt-trigger" href="#">Currículo</a>
+                            <!--index.html#resume-->
                         </li>
                         <li>
                             <a class="pt-trigger" href="#">Serviços</a>
+                            <!--index.html#services-->
                         </li>
                         <li>
                             <a class="pt-trigger" href="#">Portfólio</a>
+                            <!--index.html#portfolio-->
                         </li>
                     </ul>
                     <!-- /Main menu -->
@@ -68,7 +71,7 @@
         <!-- Mobile Header -->
         <div class="mobile-header mobile-visible">
             <div class="mobile-logo-container">
-                <div class="mobile-site-title">Wellington Nunes Verzola</div>
+                <div class="mobile-site-title">Wellington N. Verzola</div>
             </div>
 
             <a class="menu-toggle mobile-visible">
@@ -91,7 +94,7 @@
                                 <div class="row">
                                     <div class="col-sm-4 col-md-4 col-lg-4">
                                         <div class="photo">
-                                            <img src="images/wnv.jpg" alt="Felicity Jones">
+                                            <img src="images/wnv.jpg" alt="Wellington N Verzola">
                                         </div>
                                     </div>
 
@@ -100,7 +103,7 @@
                                             <h1>Wellington N. Verzola</h1>
                                             <div class="owl-carousel text-rotation">
                                                 <div class="item">
-                                                    <div class="sp-subtitle">Desenvolvedor Backend</div>
+                                                    <div class="sp-subtitle">Desenvolvedor back-end</div>
                                                 </div>
                                                 <div class="item">
                                                     <div class="sp-subtitle">Delphi</div>
@@ -111,16 +114,13 @@
                                                 <div class="item">
                                                     <div class="sp-subtitle">Git/Github</div>
                                                 </div>
-                                                <div class="item">
-                                                    <div class="sp-subtitle">Engenheiro Blockchain</div>
-                                                </div>
                                             </div>
                                         </div>
 
                                         <div class="social-links">
-                                            <a href="#"><i class="fa fa-twitter"></i></a>
-                                            <a href="https://www.facebook.com/wellington.nverzola" target="_blank"><i class="fa fa-facebook"></i></a>
-                                            <a href="https://www.instagram.com/wellington_n_v" target="_blank"><i class="fa fa-instagram"></i></a>
+                                            <a href="#" aria-hidden="true" target="_blank"><i class="fa fa-twitter"></i></a>
+                                            <a href="#" aria-hidden="true" target="_blank"><i class="fa fa-facebook"></i></a>
+                                            <a href="#" aria-hidden="true" target="_blank"><i class="fa fa-instagram"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -148,10 +148,10 @@
                                         <ul class="info-list">
                                             <li><span class="title">Idade</span><span class="value">36</span></li>
                                             <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                                            <li><span class="title">Cidade/Estado</span><span class="value">Cachoeiro de Itapemrim, ES</span></li>
+                                            <li><span class="title">Cidade/Estado</span><span class="value">Cachoeiro de Itapemirim, ES</span></li>
                                             <li><span class="title">E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
-                                            <li><span class="title">Fone</span><span class="value">+5528 99937-9884</span></li>
-                                            <li><span class="title">Freelance</span><span class="value available">Inisponível</span></li>
+                                            <li><span class="title">Fone</span><span class="value">+55 28 99937-9884</span></li>
+                                            <li><span class="title">Freelance</span><span class="value available">Indisponível</span></li>
                                         </ul>
                                     </div>
 
@@ -402,11 +402,124 @@
                                             </div>
                                         </div>
 
+                                        <div class="col-sm-4 col-md-2 subpage-block">
+                                            <div class="client-block">
+                                                <a href="index.html#" target="_blank"><img src="images/clients/client_3.png" alt="image" class="mCS_img_loaded"></a>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-4 col-md-2 subpage-block">
+                                            <div class="client-block">
+                                                <a href="index.html#" target="_blank"><img src="images/clients/client_4.png" alt="image" class="mCS_img_loaded"></a>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-4 col-md-2 subpage-block">
+                                            <div class="client-block">
+                                                <a href="index.html#" target="_blank"><img src="images/clients/client_5.png" alt="image" class="mCS_img_loaded"></a>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-4 col-md-2 subpage-block">
+                                            <div class="client-block">
+                                                <a href="index.html#" target="_blank"><img src="images/clients/client_6.png" alt="image" class="mCS_img_loaded"></a>
+                                            </div>
+                                        </div>
+
                                     </div>
                                 </div>
                                 <!-- End of Clients -->
 
+                                <!-- Testimonials -->
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-12">
+                                        <div class="block-title">
+                                            <h3>Depoimentos de clientes</h3>
+                                        </div>
 
+
+                                        <div class="testimonials owl-carousel block">
+                                            <!-- Testimonial 1 -->
+                                            <div class="testimonial-item">
+                                                <!-- Testimonial Author -->
+                                                <div class="testimonial-credits">
+                                                    <!-- Picture -->
+                                                    <div class="testimonial-picture">
+                                                        <img src="images/testimonials/testimonial_photo_1.jpg" alt="">
+                                                    </div>
+                                                    <!-- /Picture -->
+                                                    <!-- Testimonial author information -->
+                                                    <div class="testimonial-author-info">
+                                                        <p class="testimonial-author">Maria Richardson</p>
+                                                        <p class="testimonial-firm">Lindsley's Lumber</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial author information -->
+                                                <!-- Testimonial Content -->
+                                                <div class="testimonial-content">
+                                                    <div class="testimonial-text">
+                                                        <p>"Phasellus eu nunc tincidunt, ultricies elit vitae, pretium eros. Sed sed ipsum sed massa."</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial Content -->
+                                            </div>
+                                            <!-- End of Testimonial 1 -->
+
+                                            <!-- Testimonial 2 -->
+                                            <div class="testimonial-item">
+                                                <!-- Testimonial Author -->
+                                                <div class="testimonial-credits">
+                                                    <!-- Picture -->
+                                                    <div class="testimonial-picture">
+                                                        <img src="images/testimonials/testimonial_photo_2.jpg" alt="">
+                                                    </div>
+                                                    <!-- /Picture -->
+                                                    <!-- Testimonial author information -->
+                                                    <div class="testimonial-author-info">
+                                                        <p class="testimonial-author">John Doe</p>
+                                                        <p class="testimonial-firm">Apple Inc.</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial author information -->
+                                                <!-- Testimonial Content -->
+                                                <div class="testimonial-content">
+                                                    <div class="testimonial-text">
+                                                        <p>"Vivamus porta dapibus tristique. Suspendisse et arcu eget nisi convallis eleifend nec ac lorem.</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial Content -->
+                                            </div>
+                                            <!-- End of Testimonial 2 -->
+
+                                            <!-- Testimonial 3 -->
+                                            <div class="testimonial-item">
+                                                <!-- Testimonial Author -->
+                                                <div class="testimonial-credits">
+                                                    <!-- Picture -->
+                                                    <div class="testimonial-picture">
+                                                        <img src="images/testimonials/testimonial_photo_3.jpg" alt="">
+                                                    </div>
+                                                    <!-- /Picture -->
+                                                    <!-- Testimonial author information -->
+                                                    <div class="testimonial-author-info">
+                                                        <p class="testimonial-author">George McQueen</p>
+                                                        <p class="testimonial-firm">Harmony House</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial author information -->
+                                                <!-- Testimonial Content -->
+                                                <div class="testimonial-content">
+                                                    <div class="testimonial-text">
+                                                        <p>"Aliquam congue auctor lectus sed fermentum. Nulla ultricies tellus quis sapien lacinia egestas."</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial Content -->
+                                            </div>
+                                            <!-- End of Testimonial 3 -->
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End of Tesimonials -->
                             </div>
                         </div>
                     </section>
@@ -616,7 +729,7 @@
         <!-- /Main Content -->
     </div>
     <footer>
-        <div class="copyrights">&copy; Geek University</div>
+        <!--<div class="copyrights">&copy; Geek University</div>-->
     </footer>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
