--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Curriculum vitae Wellington Nunes Verzola" />
-    <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
+    <meta name="keywords" content="curriculo, vitae, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -96,6 +96,9 @@
                                         <div class="photo">
                                             <img src="images/wnv.jpg" alt="Wellington N Verzola">
                                         </div>
+                                        <P>
+                                            <BR>
+                                        </P>
                                     </div>
 
                                     <div class="col-sm-8 col-md-8 col-lg-8">
@@ -118,9 +121,9 @@
                                         </div>
 
                                         <div class="social-links">
-                                            <a href="#" aria-hidden="true" target="_blank"><i class="fa fa-twitter"></i></a>
-                                            <a href="#" aria-hidden="true" target="_blank"><i class="fa fa-facebook"></i></a>
-                                            <a href="#" aria-hidden="true" target="_blank"><i class="fa fa-instagram"></i></a>
+                                            <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                            <a href="https://www.facebook.com/wellington.nverzola" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                            <a href="https://www.instagram.com/wellington_n_v" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
