--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                                         </div>
 
                                         <div class="social-links">
-                                            <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                            <a href="https://www.facebook.com/wellington.nverzola" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                            <a href="https://www.instagram.com/wellington_n_v" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                            <a href="#" target="_blank" aria-label="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                            <a href="https://www.facebook.com/wellington.nverzola" rel="noopener noreferrer" target="_blank" aria-label="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                            <a href="https://www.instagram.com/wellington_n_v" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
