--- a/index.html
+++ b/index.html
@@ -109,13 +109,22 @@
                                                     <div class="sp-subtitle">Desenvolvedor back-end</div>
                                                 </div>
                                                 <div class="item">
-                                                    <div class="sp-subtitle">Delphi</div>
+                                                    <div class="sp-subtitle">Delphi/PHP/CSS/JS/React JS</div>
                                                 </div>
                                                 <div class="item">
-                                                    <div class="sp-subtitle">SQL</div>
+                                                    <div class="sp-subtitle">MySQL/Firebird/Paradox/SQL Server/Oracle</div>
                                                 </div>
                                                 <div class="item">
                                                     <div class="sp-subtitle">Git/Github</div>
+                                                </div>
+                                                <div class="item">
+                                                    <div class="sp-subtitle">Azure/Redmine</div>
+                                                </div>
+                                                <div class="item">
+                                                    <div class="sp-subtitle">DDD/TDD/BDD</div>
+                                                </div>
+                                                <div class="item">
+                                                    <div class="sp-subtitle">DDD/TDD/BDD</div>
                                                 </div>
                                             </div>
                                         </div>
