--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="pt-trigger" href="index.html#home">Início</a>
                         </li>
                         <li>
-                            <a class="pt-trigger" href="#">Currículo</a>
+                            <a class="pt-trigger" href="index.html#resume">Currículo</a>
                             <!--index.html#resume-->
                         </li>
                         <li>
@@ -133,6 +133,9 @@
 </svg></i></a>
                                             <a href="https://www.facebook.com/wellington.nverzola" title="Facebook" rel="noopener noreferrer" target="_blank" aria-label="Facebook"><i class="fa fa-facebook"></i></a>
                                             <a href="https://www.instagram.com/wellington_n_v" title="Instagram" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
+                                            <a href="https://www.linkedin.com/in/wellington-nunes-verzola-019760184/" title="Linkedin" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+  <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+</svg></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -191,28 +194,28 @@
                                             <div class="timeline">
                                                 <!-- Education 1 -->
                                                 <div class="timeline-item">
-                                                    <h4 class="item-title">Specialization Course</h4>
-                                                    <span class="item-period">2010</span>
-                                                    <span class="item-small">Apple Inc.</span>
-                                                    <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Git e Github Essencial para o Desenvolvedor.</p>
                                                 </div>
                                                 <!-- / Education 1 -->
 
                                                 <!-- Education 2 -->
                                                 <div class="timeline-item">
-                                                    <h4 class="item-title">Specialization Course</h4>
-                                                    <span class="item-period">2010</span>
-                                                    <span class="item-small">Apple Inc.</span>
-                                                    <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Consumindo REST APIs com Delphi.</p>
                                                 </div>
                                                 <!-- / Education 2 -->
 
                                                 <!-- Education 3 -->
                                                 <div class="timeline-item">
-                                                    <h4 class="item-title">Specialization Course</h4>
+                                                    <h4 class="item-title">Curso de Especialização</h4>
                                                     <span class="item-period">2010</span>
-                                                    <span class="item-small">Apple Inc.</span>
-                                                    <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                                                    <span class="item-small">Instituto padre Réus</span>
+                                                    <p class="item-description">Técnico em Eletrônica (Analógica e Digital).</p>
                                                 </div>
                                                 <!-- / Education 3 -->
                                             </div>
@@ -228,28 +231,28 @@
                                             <div class="timeline">
                                                 <!-- Experience 1 -->
                                                 <div class="timeline-item">
-                                                    <h4 class="item-title">Frontend-developer</h4>
-                                                    <span class="item-period">Dec 2012 - Current</span>
-                                                    <span class="item-small">Web Agency</span>
-                                                    <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                                                    <h4 class="item-title">Desenvolvedor Back-End</h4>
+                                                    <span class="item-period">Junho 2021 - Atual</span>
+                                                    <span class="item-small">Tecsystem Tecnologia em Software</span>
+                                                    <p class="item-description"></p>
                                                 </div>
                                                 <!-- / Experience 1 -->
 
                                                 <!-- Experience 2 -->
                                                 <div class="timeline-item">
-                                                    <h4 class="item-title">Web Designer</h4>
-                                                    <span class="item-period">Dec 2011 - Nov 2012</span>
-                                                    <span class="item-small">Apple Inc.</span>
-                                                    <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                                                    <h4 class="item-title">Técnico de Informática - Programador</h4>
+                                                    <span class="item-period">2017 - 2021</span>
+                                                    <span class="item-small">WNV Internet e Conectividade</span>
+                                                    <p class="item-description"></p>
                                                 </div>
                                                 <!-- / Experience 2 -->
 
                                                 <!-- Experience 3 -->
                                                 <div class="timeline-item">
-                                                    <h4 class="item-title">Graphic Designer</h4>
-                                                    <span class="item-period">Jan 2010 - Dec 2011</span>
-                                                    <span class="item-small">Apple Inc.</span>
-                                                    <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                                                    <h4 class="item-title">Técnico de Manutenção de Sistemas e Instrumentos</h4>
+                                                    <span class="item-period">Maio 2007 - Jan 2008</span>
+                                                    <span class="item-small">Casa do toner LTDA</span>
+                                                    <p class="item-description"></p>
                                                 </div>
                                                 <!-- / Experience 3 -->
                                             </div>
@@ -257,7 +260,7 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
+                                <!--   <div class="row"> 
                                     <div class="col-sm-6 col-md-6 col-lg-6">
                                         <div class="block">
                                             <div class="block-title">
@@ -309,7 +312,7 @@
 
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <!-- Download Resume Button -->
                                 <div class="row">
