--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="js/wnv.js"></script>
 </head>
 
-<body class="material-template">
+<body class="material-template" onload="calcularIdade('08/01/1987');">
     <!-- Loading animation -->
     <div class="preloader">
         <div class="preloader-animation">
@@ -161,7 +162,7 @@
 
                                     <div class="col-sm-6 col-md-6 col-lg-6">
                                         <ul class="info-list">
-                                            <li><span class="title">Idade</span><span class="value">36</span></li>
+                                            <li><span class="title">Idade</span><span class="value"><div id="idade"></div></span></li>
                                             <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
                                             <li><span class="title">Cidade/Estado</span><span class="value">Cachoeiro de Itapemirim, ES</span></li>
                                             <li><span class="title">E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
@@ -709,6 +710,7 @@
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="js/jquery.googlemap.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+
 </body>
 
 </html>
