--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                             <a class="pt-trigger" href="#services">Serviços</a>
                             <!--index.html#services-->
                         </li>
-                        <li>
+                        <!-- <li>
                             <a class="pt-trigger" href="#">Portfólio</a>
-                            <!--index.html#portfolio-->
-                        </li>
+                            index.html#portfolio
+                        </li>-->
                     </ul>
                     <!-- /Main menu -->
                 </div>
