--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" hidden="True"><img src="images/clients/client_5.png" alt="image" class="mCS_img_loaded"></a>
+                                                <a href="#" title="Comanda Eletrônica - Sistema de Gestão"><img src="images/clients/client_5.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
                                         </div>
 
