--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="js/wnv.js"></script>
 </head>
 
-<body class="material-template" onload="calcularIdade('08/01/1987');">
+<body class="material-template" onload="calcularIdade('08/01/1987'); disponivel();">
     <!-- Loading animation -->
     <div class="preloader">
         <div class="preloader-animation">
@@ -167,7 +167,7 @@
                                             <li><span class="title">Cidade/Estado</span><span class="value">Cachoeiro de Itapemirim, ES</span></li>
                                             <li><span class="title">E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
                                             <li><span class="title">Fone</span><span class="value">+55 28 99937-9884</span></li>
-                                            <li><span class="title">Freelance</span><span class="value available">Indisponível</span></li>
+                                            <li><span class="title">Freelance</span><span class="value available"><div id="trabalho"></div></span></li>
                                         </ul>
                                     </div>
 
