--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                                     <div class="col-sm-6 col-md-6 col-lg-6">
                                         <div class="about-me">
                                             <div class="block-title">
-                                                <h3>Quem <span>Sou?</span></h3>
+                                                <h3>Um pouco sobre <span>mim</span></h3>
                                             </div>
                                             <p>Olá, sou um desenvolvedor back-end apaixonado por novas tecnologias e como elas podem ajudar a tornar nossas vidas melhores. Sou Licenciado em Sistemas de Informação, Curso Técnico em Informática e trabalhei
                                                 durante todo o período de estudo, acumulando 16 anos de experiência na área de Informática. Já trabalhei em várias funções, de DevOps a desenvolvedor web, fornecendo soluções para vários problemas sem estar
                                                 preso a uma tecnologia específica. Com experiência de trabalho em diferentes ambientes como pequena e média empresa. Um aluno constante que gosta de misturar tecnologias novas e entusiastas com tópicos acadêmicos
-                                                como engenharia de software, arquitetura de software, qualidade de software e assim por diante. Tenho uma sólida formação em bancos de dados relacionais, linguagens OOP como Delphi, Linux e serviços de rede.</p>
+                                                como engenharia de software, arquitetura de software, qualidade de software e assim por diante. Tenho uma sólida formação em bancos de dados relacionais, linguagens OOP como Delphi.</p>
                                         </div>
                                         <div class="download-resume">
                                             <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
