--- a/index.html
+++ b/index.html
@@ -413,36 +413,48 @@
                                             <div class="client-block">
                                                 <a href="#" title="Geagro"><img src="images/clients/client_1.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
+                                            <h5 style="text-align:center;">Geagro</h5>
+                                            <p style="text-align:center;">Sistema de gestão agropecuária.</p>
                                         </div>
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
                                                 <a href="#" title="Facture-e"><img src="images/clients/client_2.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
+                                            <h5 style="text-align:center;">Facture-e</h5>
+                                            <p style="text-align:center;">Sistema de emissão de documentos fiscais.</p>
                                         </div>
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
                                                 <a href="#" title="Monnae"><img src="images/clients/client_3.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
+                                            <h5 style="text-align:center;">Monnae</h5>
+                                            <p style="text-align:center;">Sistema de gestão financeira.</p>
                                         </div>
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
                                                 <a href="#" title="PDV"><img src="images/clients/client_4.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
+                                            <h5 style="text-align:center;">PDV</h5>
+                                            <p style="text-align:center;">Frente de caixa.</p>
                                         </div>
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
                                                 <a href="#" title="Comanda Eletrônica - Sistema de Gestão"><img src="images/clients/client_5.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
+                                            <h5 style="text-align:center;">Comanda</h5>
+                                            <p style="text-align:center;">Sistema de gestão de pedidos.</p>
                                         </div>
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" hidden="True"><img src="images/clients/client_6.png" alt="image" class="mCS_img_loaded"></a>
+                                                <a href="#" title="DataCount"><img src="images/clients/client_6.png" alt="image" class="mCS_img_loaded"></a>
                                             </div>
+                                            <h5 style="text-align:center;">DataCount</h5>
+                                            <p style="text-align:center;">Sistema de monitoramento de impressão.</p>
                                         </div>
 
                                     </div>
