--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" title="Geagro"><img src="images/clients/client_1.png" alt="image" class="mCS_img_loaded"></a>
+                                                <img src="images/clients/client_1.png" title="Geagro" alt="image" class="mCS_img_loaded">
                                             </div>
                                             <h5 style="text-align:center;">Geagro</h5>
                                             <p style="text-align:center;">Sistema de gestão agropecuária.</p>
@@ -419,7 +419,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" title="Facture-e"><img src="images/clients/client_2.png" alt="image" class="mCS_img_loaded"></a>
+                                                <img src="images/clients/client_2.png" title="Facture-e" alt="image" class="mCS_img_loaded">
                                             </div>
                                             <h5 style="text-align:center;">Facture-e</h5>
                                             <p style="text-align:center;">Sistema de emissão de documentos fiscais.</p>
@@ -427,7 +427,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" title="Monnae"><img src="images/clients/client_3.png" alt="image" class="mCS_img_loaded"></a>
+                                                <img src="images/clients/client_3.png" title="Monnae" alt="image" class="mCS_img_loaded">
                                             </div>
                                             <h5 style="text-align:center;">Monnae</h5>
                                             <p style="text-align:center;">Sistema de gestão financeira.</p>
@@ -435,7 +435,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" title="PDV"><img src="images/clients/client_4.png" alt="image" class="mCS_img_loaded"></a>
+                                                <img src="images/clients/client_4.png" title="PDV" alt="image" class="mCS_img_loaded">
                                             </div>
                                             <h5 style="text-align:center;">PDV</h5>
                                             <p style="text-align:center;">Frente de caixa.</p>
@@ -443,7 +443,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" title="Comanda Eletrônica - Sistema de Gestão"><img src="images/clients/client_5.png" alt="image" class="mCS_img_loaded"></a>
+                                                <img src="images/clients/client_5.png" title="Comanda Eletrônica - Sistema de Gestão" alt="image" class="mCS_img_loaded">
                                             </div>
                                             <h5 style="text-align:center;">Comanda</h5>
                                             <p style="text-align:center;">Sistema de gestão de pedidos.</p>
@@ -451,7 +451,7 @@
 
                                         <div class="col-sm-4 col-md-2 subpage-block">
                                             <div class="client-block">
-                                                <a href="#" title="DataCount"><img src="images/clients/client_6.png" alt="image" class="mCS_img_loaded"></a>
+                                                <img src="images/clients/client_6.png" title="DataCount" alt="image" class="mCS_img_loaded">
                                             </div>
                                             <h5 style="text-align:center;">DataCount</h5>
                                             <p style="text-align:center;">Sistema de monitoramento de impressão.</p>
