--- a/index.html
+++ b/index.html
@@ -459,6 +459,25 @@
 
                                     </div>
                                 </div>
+                                <div class="col-sm-12 col-md-12">
+
+                                    <div class="col-sm-4 col-md-2 subpage-block">
+                                        <div class="client-block">
+                                            <img src="images/clients/client_7.png" title="Geoserviços" alt="image" class="mCS_img_loaded">
+                                        </div>
+                                        <h5 style="text-align:center;">Geoserviços</h5>
+                                        <p style="text-align:center;">Software de gestão de serviços.</p>
+                                    </div>
+
+                                    <div class="col-sm-4 col-md-2 subpage-block">
+                                        <div class="client-block">
+                                            <img src="images/clients/client_8.png" title="Migração" alt="image" class="mCS_img_loaded">
+                                        </div>
+                                        <h5 style="text-align:center;">Migração</h5>
+                                        <p style="text-align:center;">Software de migração automatizado.</p>
+                                    </div>
+
+                                </div>
 
                             </div>
 
