--- a/index.html
+++ b/index.html
@@ -163,12 +163,14 @@
 
                                     <div class="col-sm-6 col-md-6 col-lg-6">
                                         <ul class="info-list">
-                                            <li><span class="title">Idade</span><span class="value"><div id="idade"></div></span></li>
-                                            <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                                            <li><span class="title">Cidade/Estado</span><span class="value">Cachoeiro de Itapemirim, ES</span></li>
-                                            <li><span class="title">E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
-                                            <li><span class="title">Fone</span><span class="value">+55 28 99937-9884</span></li>
-                                            <li><span class="title">Freelance</span><span class="value available"><div id="trabalho"></div></span></li>
+                                            <li><span class="title fa fa-calendar-o">&nbsp; Idade</span><span class="value"><div id="idade"></div></span></li>
+                                            <li><span class="title"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-flag-fill" viewBox="0 0 16 16">
+  <path d="M14.778.085A.5.5 0 0 1 15 .5V8a.5.5 0 0 1-.314.464L14.5 8l.186.464-.003.001-.006.003-.023.009a12.435 12.435 0 0 1-.397.15c-.264.095-.631.223-1.047.35-.816.252-1.879.523-2.71.523-.847 0-1.548-.28-2.158-.525l-.028-.01C7.68 8.71 7.14 8.5 6.5 8.5c-.7 0-1.638.23-2.437.477A19.626 19.626 0 0 0 3 9.342V15.5a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 1 0v.282c.226-.079.496-.17.79-.26C4.606.272 5.67 0 6.5 0c.84 0 1.524.277 2.121.519l.043.018C9.286.788 9.828 1 10.5 1c.7 0 1.638-.23 2.437-.477a19.587 19.587 0 0 0 1.349-.476l.019-.007.004-.002h.001"/>
+</svg>&nbsp;Nacionalidade</span><span class="value">Brasil</span></li>
+                                            <li><span class="title fa fa-map-marker">&nbsp;Cidade/Estado</span><span class="value">Cachoeiro de Itapemirim, ES</span></li>
+                                            <li><span class="title fa fa-envelope-open-o">&nbsp;E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
+                                            <li><span class="title fa fa-phone">&nbsp;Contato</span><span class="value">+55 28 99937-9884</span></li>
+                                            <li><span class="title fa fa-university">&nbsp;Freelance</span><span class="value available"><div id="trabalho"></div></span></li>
                                         </ul>
                                     </div>
 
