--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
 </svg>&nbsp;Nacionalidade</span><span class="value">Brasil</span></li>
                                             <li><span class="title fa fa-map-marker">&nbsp;Cidade/Estado</span><span class="value">Cachoeiro de Itapemirim, ES</span></li>
                                             <li><span class="title fa fa-envelope-open-o">&nbsp;E-mail</span><span class="value">wellingtonnunesverzola@gmail.com</span></li>
-                                            <li><span class="title fa fa-phone">&nbsp;Contato</span><span class="value">+55 28 99937-9884</span></li>
+                                            <li><span class="title fa fa-phone">&nbsp;Contato</span><span class="value">
+                                                <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5528999379884" target="_blank"><text class="fa fa-whatsapp"> +55 28 99937-9884</text></a></span></li>
                                             <li><span class="title fa fa-university">&nbsp;Freelance</span><span class="value available"><div id="trabalho"></div></span></li>
                                         </ul>
                                     </div>
