--- a/index.html
+++ b/index.html
@@ -482,6 +482,48 @@
 
                                 </div>
 
+
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-12">
+                                        <div class="block-title">
+                                            <h3>Depoimentos de clientes</h3>
+                                        </div>
+
+
+                                        <div class="testimonials owl-carousel block">
+                                            <!-- Testimonial 1 -->
+                                            <div class="testimonial-item">
+                                                <!-- Testimonial Author -->
+                                                <div class="testimonial-credits">
+                                                    <!-- Picture -->
+                                                    <div class="testimonial-picture">
+                                                        <img src="images/testimonials/testimonial_photo_1.jpg" alt="">
+                                                    </div>
+                                                    <!-- /Picture -->
+                                                    <!-- Testimonial author information -->
+                                                    <div class="testimonial-author-info">
+                                                        <p class="testimonial-author">Charles Porto</p>
+                                                        <p class="testimonial-firm">UX Designer / Graphic Designer / Mobile WEB</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial author information -->
+                                                <!-- Testimonial Content -->
+                                                <div class="testimonial-content">
+                                                    <div class="testimonial-text">
+                                                        <p style="text-align:center;">"Muito bom cumpriu o prometido."</p>
+                                                    </div>
+                                                </div>
+                                                <!-- /Testimonial Content -->
+                                            </div>
+                                            <!-- End of Testimonial 1 -->
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End of Tesimonials -->
+
+
                             </div>
 
                         </div>
@@ -575,6 +617,8 @@
                         </div>
                     </section>
                     <!-- /Portfolio Subpage -->
+
+
 
                 </div>
             </div>
