--- a/index.html
+++ b/index.html
@@ -221,6 +221,24 @@
                                                     <p class="item-description">Técnico em Eletrônica (Analógica e Digital).</p>
                                                 </div>
                                                 <!-- / Education 3 -->
+
+                                                <!-- Education 4 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">C#, UML, ASP.NET, Entity Framework, LINQ, Lambda.</p>
+                                                </div>
+                                                <!-- / Education 4 -->
+
+                                                <!-- Education 5 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Javascript e TypeScript - front-end e back-end (Full Stack) - Node, Express, noSQL, React, hooks, Redux, Design Patterns.</p>
+                                                </div>
+                                                <!-- / Education 5 -->
                                             </div>
                                         </div>
                                     </div>
@@ -581,6 +599,19 @@
                                             </a>
                                         </figure>
                                         <!-- /Portfolio Item 2 -->
+
+                                        <!-- Portfolio Item 3 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/3.jpg" class="lightbox" title="C# e OO, coleções, UML, ASP.NET, Entity Framework, LINQ, Lambda">
+                                                <img src="images/portfolio/3.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">C# e OO, coleções, UML, ASP.NET, Entity Framework, LINQ, Lambda</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 3 -->
 
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
