--- a/index.html
+++ b/index.html
@@ -613,6 +613,19 @@
                                         </figure>
                                         <!-- /Portfolio Item 3 -->
 
+                                        <!-- Portfolio Item 4 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/4.jpg" class="lightbox" title="Javascript e TypeScript - front-end e back-end (Full Stack) - Node, Express, noSQL, React, hooks, Redux, Design Patterns">
+                                                <img src="images/portfolio/4.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Javascript e TypeScript - front-end e back-end (Full Stack) - Node, Express, noSQL, React, hooks, Redux, Design Patterns</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 4 -->
+
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
                                             <a href="images/portfolio/10.jpg" class="lightbox" title="Hotel Rinkão">
