--- a/index.html
+++ b/index.html
@@ -626,6 +626,45 @@
                                         </figure>
                                         <!-- /Portfolio Item 4 -->
 
+                                        <!-- Portfolio Item 5 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/5.jpg" class="lightbox" title="Kanban">
+                                                <img src="images/portfolio/5.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Kanban</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 5 -->
+
+                                        <!-- Portfolio Item 6 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/6.jpg" class="lightbox" title="Data science">
+                                                <img src="images/portfolio/6.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Data science</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 6 -->
+
+                                        <!-- Portfolio Item 7 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/7.jpg" class="lightbox" title="Engenharia de dados">
+                                                <img src="images/portfolio/7.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Engenharia de dados</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 7 -->
+
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
                                             <a href="images/portfolio/10.jpg" class="lightbox" title="Hotel Rinkão">
