--- a/index.html
+++ b/index.html
@@ -239,6 +239,33 @@
                                                     <p class="item-description">Javascript e TypeScript - front-end e back-end (Full Stack) - Node, Express, noSQL, React, hooks, Redux, Design Patterns.</p>
                                                 </div>
                                                 <!-- / Education 5 -->
+
+                                                <!-- Education 6 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Kanban.</p>
+                                                </div>
+                                                <!-- / Education 6 -->
+
+                                                <!-- Education 7 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Data science.</p>
+                                                </div>
+                                                <!-- / Education 7 -->
+
+                                                <!-- Education 8 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Engenharia de dados.</p>
+                                                </div>
+                                                <!-- / Education 8 -->
                                             </div>
                                         </div>
                                     </div>
