--- a/index.html
+++ b/index.html
@@ -266,6 +266,15 @@
                                                     <p class="item-description">Engenharia de dados.</p>
                                                 </div>
                                                 <!-- / Education 8 -->
+
+                                                <!-- Education 9 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">ADVPL - Boas práticas de programação.</p>
+                                                </div>
+                                                <!-- / Education 9 -->
                                             </div>
                                         </div>
                                     </div>
@@ -691,6 +700,19 @@
                                             </a>
                                         </figure>
                                         <!-- /Portfolio Item 7 -->
+
+                                        <!-- Portfolio Item 8 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/8.jpg" class="lightbox" title="ADVPL - Boas práticas de programação">
+                                                <img src="images/portfolio/8.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">ADVPL - Boas práticas de programação</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 8 -->
 
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
